# gitbugactions

./: .env.template  .gitignore  README.md  __main__.py  act.py  collect_bugs.py  collect_repos.py  crawler.py  export_bugs.py  extract_bugs.py  filter_bugs.py  organize_bugs.py  pyproject.toml  renovate.json  requirements.txt  run_bug.py  runnable_50.out  runnable_repo.py  runnable_rust.out  save_bugs.py  setup.sh  test_parser.py
crawlergpt/: act.py  collect_bugs.py  crawler.py  github_token.py  limit.py  test_executor.py  test_parser.py  util.py
data/: runnable_go.out
docs/: commit_execution.md
gitbugactions/: __init__.py  crawler.py  github_api.py  test_executor.py  util.py
out_50/: 008chen-InterpolatorShow.json  06peng-FrescoDemo.json  0x5e-RubiksCubeSolver.json  0xfe-experiments.json  1000Memories-photon-core.json  100cm-thunder.json  1011641270-Jfinal.json  103style-SpeedControl.json  109021017-GridViewPager.json  11039850-monalisa-orm.json  13120241790-SeaStar.json  151376liujie-wechat-core.json  15knots-cmake4eclipse.json  1994-ssm-scaffold.json  1anc3r-AirFree-Client.json  1and1-cosmo.json  1gravity-Android-RTEditor.json  1hakr-AnExplorer.json  256dpi-processing-mqtt.json  29995270-HorizontalRefreshLayout.json  29jitender-Spotlight.json  308tube-com.youtube.rest.json  3pillarlabs-socialauth.json  401Studio-WeekLearn.json  42BV-CSVeed.json  44kksharma-Android-ViewPager-Carousel-UI.json  452-USBHIDTerminal.json  47degrees-android-wunderground-client.json  4refr0nt-ESPlorer.json  500px-500px-android-blur.json  500px-greedo-layout-for-android.json  50onRed-mock-jedis.json  52inc-Scoops.json  58code-Gaea.json  5hmlA-Jgraph.json  5peak2me-QRCode.json  64797099-BaiduUI.json  6thsolution-EasyMVP.json  70kg-Meizi.json  7LPdWcaW-GrowTracker-Android.json  (+8837 more)
out_bugs_java/: EsotericSoftware-yamlbeans.jsonl  darrachequesne-spring-data-jpa-datatables.jsonl  nodebox-nodebox.jsonl  tdunning-t-digest.jsonl  tinify-tinify-java.jsonl  w3c-epubcheck.jsonl
out_go/: 0xAX-go-algorithms.json  0xAX-notificator.json  18plusui-leetcode.json  1ambda-golang.json  1l0-identicon.json  32bitkid-mpeg.json  3ofcoins-jetpack.json  42wim-gomphs.json  710leo-urlooker.json  766b-mobi.json  99designs-aws-vault.json  99designs-iamy.json  9fans-go.json  9seconds-ah.json  AaronO-go-git-http.json  AdRoll-goamz.json  AdRoll-hologram.json  AdguardTeam-AdGuardHome.json  AkihiroSuda-aspectgo.json  AkihiroSuda-go-netfilter-queue.json  AlekSi-gocov-xml.json  Alienero-quick-know.json  Alienero-tun-go.json  AliyunContainerService-docker-machine-driver-aliyunecs.json  AllenDang-gform.json  AndreasBriese-ipLocator.json  AndrewGuenther-jsonf.json  AntoineAugusti-feature-flags.json  Arachnid-etherquery.json  Arachnid-evmdis.json  ArthurHlt-go-eureka-client.json  Arvanaghi-CheckPlease.json  Ayiga-go-kit-middlewarer.json  Azareal-Gosora.json  Azure-go-ansiterm.json  (+4009 more)
(+259195 files in other folders)
